[UPD] Personalize name and image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>BricoTodo, tu centro de Bricolaje</title>
+	<title>Moka & Miau, tu cafetería gatuna</title>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Caveat&display=swap" rel="stylesheet">
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="estilos.css">
 </head>
 <body class="index-bg">
-	<h1 class="index-h1">Centro de Bricolaje "BricoToDo"</h1>
-	<h2 class="index-h2">Bienvenidos al lugar donde se hacen realidad tus sueños</h2>
+	<h1 class="index-h1">Cafetería Moka & Miau</h1>
+	<h2 class="index-h2">Café, calma y ronroneos.</h2>
 
 	<ol>
 		<li><a href="#">Quienes somos</a></li>
